Frankly my dear, I dont give a damn

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 		<a>
 			<img alt="It was supposed to work" src="https://www.holbertonschool.com/holberton-logo.png">
 		</a>
-
+		<a href = file:///C:/Users/STUDENT/alu-web-development/tweets.html></a>
         </body>
 </html>
